add index.html and game.html

--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
     <a href="game.html">Игра</a>
     <h1>ДЗ4</h1>
     <h2>Игра: "Кто хочет стать миллионером"</h2>
+    <h3>Спасибо за проверку)</h3>
 
 
     <script type="text/javascript" src="script2.js"></script>
