--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="game.html">Игра</a>
     <h1>ДЗ4</h1>
     <h2>Разложение числа на сотни, десятки и единицы</h2>
+    <h3>Спасибо за проверку)</h3>
 
 
 
